--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,121 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
-@import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
+body {
+  font-family: Arial, sans-serif;
+  background-color: #fff;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding-top: 50px;
+}
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+#datetime-picker {
+  padding: 6px 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  margin-right: 6px;
+  width: 180px;
+  text-align: center;
+}
+
+button[data-start] {
+  padding: 6px 12px;
+  font-size: 14px;
+  background-color: #5bc557;
+  color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  cursor: pointer;
+  flex-direction: row;
+}
+
+button[data-start]:disabled {
+  color: #161616;
+  background-color: #a5a4a4;
+  cursor: not-allowed;
+}
+
+.timer {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.value {
+  font-size: 32px;
+  font-weight: bold;
+  color: #000;
+  line-height: 1.2;
+}
+
+.label {
+  font-size: 12px;
+  color: #464545;
+  text-transform: uppercase;
+  margin-top: 4px;
+  letter-spacing: 1px;
+}
+
+
+.delay{
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+ }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 300px;
+}
+
+input[type="number"] {
+  font-size: 20px;
+  padding: 8px;
+}
+
+input[type="number"]:focus {
+  outline: 1px solid #005cff;
+  border-radius: 2px;
+  
+}
+
+fieldset {
+  display: flex;
+  flex-direction: wrap;
+  gap: 90px;
+  font-size: 16px;
+  border: 1px solid #888;
+  border-radius: 4px;
+}
+
+legend{
+  font-size: 20px;
+ }
+
+.radio-group {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 8px;
+ }
+
+ button {
+  padding: 10px;
+  font-size: 18px;
+  border: 1px solid #888;
+  background-color: #eee;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+button:hover {
+  background-color: #e0e0e0;
+}
